# chat_cli

./: README.md  common.py  gui.py  listen_chat.py  pyproject.toml  run.py  send_to_chat.py  settings.py
