[tool.poetry]
name = "chat_cli"
version = "0.1.0"
description = ""
authors = ["aevtikheev <eft000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
aiofiles = "0.6.0"
environs = "9.3.1"

[tool.poetry.dev-dependencies]
pylint = "2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
